fix(#22, #23): doubleclick, text overflow
On PC, instead of entering and exiting editor via
mouse primary doubleclick, it is now view mouse wheel click.

To prevent text overflow after exiting editor added time delay
of 50ms

--- a/gitpen/src/app/home/home.component.scss
+++ b/gitpen/src/app/home/home.component.scss
@@ -42,6 +42,13 @@
   .content {
     width: 80%;
   }
+
+  * {
+    user-select: none !important;
+    -webkit-user-select: none !important;
+    -moz-user-select: none !important;
+    -ms-user-select: none !important;
+  }
 }
 
 @media (min-width: 768px) {
@@ -49,7 +56,16 @@
     padding-top: 50px;
     width: calc(100% - $fcWidth - $contentPadding);
   }
+
+  * {
+    user-select: text !important;
+    -webkit-user-select: text !important;
+    -moz-user-select: text !important;
+    -ms-user-select: text !important;
+  }
+
   .content {
     width: calc(100% - $fcWidth - $contentPadding);
   }
+
 }
